<resources>
    <string name="app_name">Basic Login App</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="reTypepassword_hint">Re-Type Password</string>
    <string name="name_hint">Name</string>
    <string name="password_regEx">^(?=.*[@#$%^+=])?=\\S+$.{8,}</string>
    <string name="login">Login</string>
    <string name="login_image">Login Image</string>
    <string name="new_here">New Here ? </string>
    <string name="register_now"> Register Now !</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
</resources>