<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dummy_logo"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/login_image" />

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@id/imageView"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LoginText"
                style="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    style="@style/TextInputEditTextStyle"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/emailTextInputLayout"
                style="@style/TextInputLayoutPasswordStyle"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password_hint"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    style="@style/TextInputEditTextStyle"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTextInputLayout"
                android:layout_centerInParent="true"
                android:layout_marginStart="90dp"
                android:layout_marginTop="25dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/userExistsTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/loginButton"
                android:textAlignment="center"
                style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />

          <androidx.appcompat.widget.LinearLayoutCompat
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_below="@id/userExistsTextView"
              android:gravity="center_horizontal"
              android:layout_marginTop="10dp"
              >

              <TextView
                  android:id="@+id/newUserTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:layout_below="@+id/loginButton"
                  android:layout_marginTop="8dp"
                  android:text="@string/new_here"
                  android:textSize="18sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/goToRegistration"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:layout_below="@+id/loginButton"
                  android:layout_toEndOf="@id/newUserTextView"
                  android:layout_marginTop="8dp"
                  android:textColor="@android:color/holo_red_dark"
                  android:text="@string/register_now"
                  android:textSize="18sp"
                  android:textStyle="bold" />

          </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

</ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>